--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -56,6 +56,6 @@
     <fragment
         android:id="@+id/configFragment"
         android:name="com.example.trabajo1.ui.config.ConfigFragment"
-        tools:layout="@layout/fragment_config" />
+        tools:layout="@layout/preferences" />
 
 </navigation>
